# ruby-fast-lsp

./: .gitignore  AGENTS.md  AST_VISUALIZER_README.md  CLAUDE.md  Cargo.toml  Cross.toml  README.md  ast_visualizer.html  build.rs  create_vsix.sh  ruby_fast_lsp.long-type-16198895176869369107.txt  run_ast_visualizer.sh  test_method.rb
.ai/diagrams/: README.md  indexing.c4  inlay_hints.c4  model.c4  notifications.c4  requests.c4  server.c4  type_narrowing.c4
.ai/docs/: PROGRESS_REPORTING_IMPROVEMENTS.md  deterministic_simulation_testing.md  graph_node_kind_bug.md  initialization_improvements.md  integration_test_plan.md  local_variable_nuances.md  local_variable_scope_tree.md  local_variable_scope_tree_visualization.md  memory_profiling.md  mixins_indexing.md  optimization.md  prism-visitor-pattern.md  ruby-edge-cases.md  ruby_indexing_plan.md  semantic_tokens_delta_fix.md  slotmap_architecture.md  type_inference_implementation.md
.ai/steering/: README.md  product.md  ruby-ast-mapping.md  structure.md  tech.md  testing.md  tigerstyle.md
.claude/: settings.local.json
.codex/: config.toml
.cursor/: mcp.json
.cursor/rules/: general-guidelines.mdc  test-implementation-rule.mdc
.github/workflows/: publish-open-vsx.yml  release.yml
crates/ast-visualizer/: Cargo.toml  README.md
crates/ast-visualizer/src/: ast.rs  main.rs  server.rs  utils.rs
crates/ast-visualizer/static/: index.html
crates/extension-api/: Cargo.toml
crates/extension-rspec/: Cargo.toml
crates/extension-wasm-host/: Cargo.toml
crates/extension-wasm-host/src/: lib.rs
crates/lsp-repl/: Cargo.toml  README.md
crates/lsp-repl/src/: client.rs  main.rs  protocol.rs  repl.rs  transport.rs
crates/lsp-repl/src/commands/: dynamic.rs  mod.rs  standard.rs
crates/lsp-test-harness/: Cargo.toml
crates/lsp-test-harness/src/: lib.rs
crates/lsp-test-harness/tests/: rspec_extension.rs
crates/rbs-parser/: Cargo.toml  build.rs
crates/rbs-parser/rbs_types/core/: class.rbs
crates/rbs-parser/src/: converter.rs  embedded.rs  lexer.rs  lib.rs  loader.rs  parser.rs  types.rs  visitor.rs
crates/ruby-analysis/: Cargo.toml
crates/ruby-analysis-core/: Cargo.toml
crates/ruby-analysis-engine/: Cargo.toml
crates/ruby-analysis-indexer/: Cargo.toml
crates/ruby-analysis-indexer/src/: analyzer.rs  analyzer_utils.rs  document_symbols.rs  identifier.rs  lib.rs  ruby_document.rs  scope_tracker.rs  semantic_tokens.rs  source_document.rs  variable_scopes.rs
crates/ruby-analysis-indexer/src/fact_collector/: bad_splat.rs  block_node.rs  constant_path_node.rs  constant_path_write_node.rs  constant_read_node.rs  constant_write_node.rs  def_node.rs  local_variable_read_node.rs  local_variable_write_node.rs  method_return.rs  mod.rs  module_node.rs  parameters_node.rs  singleton_class_node.rs
crates/ruby-analysis-indexer/src/fact_collector/call_node/: mod.rs
crates/ruby-analysis-indexer/src/identifier_visitor/: back_reference_read_node.rs  call_node.rs  class_node.rs  constant_path_node.rs  constant_write_node.rs  def_node.rs  mod.rs  module_node.rs
crates/ruby-analysis-indexer/src/yard/: converter.rs  parser.rs
crates/ruby-analysis-inference/: Cargo.toml
crates/ruby-analysis-inference/src/: lib.rs  rbs.rs
crates/ruby-analysis-inference/src/method/: signature.rs
crates/ruby-analysis-inference/src/type/: collection.rs  literal.rs
crates/ruby-analysis-inference/src/type_tracker/: mod.rs  narrow.rs
crates/ruby-analysis/src/: lib.rs
crates/ruby-analysis/src/core/: method_resolution.rs  mod.rs  reference_store.rs  ruby_namespace.rs  symbol_store.rs  type_store.rs
crates/ruby-analysis/src/engine/: completion.rs  debug.rs  debug_types.rs  diagnostic_helpers.rs  diagnostics.rs  engine.rs  engine_tests.rs  file_id_map.rs  hierarchy.rs  hierarchy_types.rs  lookup.rs  lookup_types.rs  mod.rs  namespace_tree.rs  namespace_tree_types.rs  query.rs  query_types.rs  resolution.rs  types.rs  workspace_symbol_types.rs  workspace_symbols.rs
crates/ruby-analysis/src/indexer/: analysis_indexer.rs  analyzer.rs  analyzer_tests.rs  analyzer_utils.rs  code_lens.rs  document_symbols.rs  hover.rs  identifier.rs  inlay_hints.rs  mod.rs  receiver_resolution.rs  rename.rs  ruby_document.rs  scope_tracker.rs  source_document.rs  variable_scopes.rs
crates/ruby-analysis/src/indexer/fact_collector/: bad_splat.rs  block_node.rs  class_node.rs  class_variable_write_node.rs  constant_path_node.rs  constant_path_write_node.rs  constant_read_node.rs  constant_write_node.rs  def_node.rs  global_variable_write_node.rs  instance_variable_write_node.rs  local_variable_write_node.rs  method_return.rs  mod.rs  parameters_node.rs
crates/ruby-analysis/src/indexer/fact_collector/call_node/: mod.rs
crates/ruby-analysis/src/indexer/identifier_visitor/: block_node.rs  call_node.rs  class_node.rs  constant_path_node.rs  constant_write_node.rs  def_node.rs  local_variable_read_node.rs  mod.rs  module_node.rs  numbered_reference_read_node.rs  parameters_node.rs
crates/ruby-analysis/src/indexer/yard/: converter.rs
crates/ruby-analysis/src/inference/: completion.rs  control_flow.rs  mod.rs  rbs.rs  type_query.rs
crates/ruby-analysis/src/inference/method/: mod.rs  return_type.rs  signature.rs
crates/ruby-analysis/src/inference/type/: collection.rs  literal.rs  ruby.rs
crates/ruby-analysis/src/inference/type_tracker/: mod.rs  narrow.rs
docs/: control_flow_graph.md  integration_test_plan.md  local_variable_completion.md  mixins_indexing.md  ruby_indexing_plan.md  testing.md  visitor_stack_refactor.md
examples/: example.rb
extensions/: README.md
npm/: build.sh  publish.sh
scripts/: download-grammar.sh  snapshot_corpus.sh  zip_stubs.sh
src/: ARCHITECTURE.md  config.rs  lib.rs  main.rs  path_discovery.rs  server.rs  version.rs  workspace.rs
src/analysis/: mod.rs
tests/: README.md  analyzer_tests.rs  ast_server_tests.rs  integration_test.rs  integration_tests.rs  parser_tests.rs  ruby_language_test.rs  test.rb  test_helpers.rs
vsix/: .gitignore  .vscodeignore  LICENSE  README.md  extension.js  package-lock.json  package.json
(+1828 files in other folders)
