[workspace]
members = [".", "crates/ast-visualizer"]
resolver = "2"

[package]
name = "ruby-fast-lsp"
version = "0.1.0"
edition = "2021"
authors = ["Ruby Fast LSP Team"]
description = "A fast Language Server Protocol implementation for Ruby"
license = "MIT"

[dependencies]
# LSP related dependencies
tower-lsp = "0.20.0"
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
log = "0.4.20"
env_logger = "0.10.0"
anyhow = "1.0.75"

# Ruby parsing and analysis
ruby-prism = "1.4.0"

# File system operations
walkdir = "2.4.0"

# Utils
parking_lot = "0.12.4"
unicode-ident = "1.0.18"
lazy_static = "1.4.0"

# Web server for AST visualization
actix-web = "4.3.1"
actix-cors = "0.6.4"

[dev-dependencies]
tokio-test = "0.4.3"
pretty_assertions = "1.4.0"
insta = { version = "1.43.1", features = ["json", "redactions"] }
tempfile = "3.8.0"
async-trait = "0.1.73"

[build-dependencies]
cc = "1.0.83"

[profile.release]
opt-level = "z"
strip = true
