[workspace]
members = [".", "crates/ast-visualizer", "crates/rbs-parser"]
resolver = "2"

[package]
name = "ruby-fast-lsp"
version = "0.1.0"
edition = "2021"
authors = ["Ruby Fast LSP Team"]
description = "A fast Language Server Protocol implementation for Ruby"
license = "MIT"

[[bin]]
name = "profile_indexer"
path = "src/bin/profile_indexer.rs"

[[bin]]
name = "check_size"
path = "src/bin/check_size.rs"

[dependencies]
# LSP related dependencies
tower-lsp = "0.20.0"
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
log = "0.4.20"
env_logger = "0.10.0"
anyhow = "1.0.75"
futures = "0.3"

# Ruby parsing and analysis
ruby-prism = "1.4.0"
rbs-parser = { path = "crates/rbs-parser" }

# File system operations
walkdir = "2.4.0"

# Utils
parking_lot = "0.12.4"
once_cell = "1.19"
unicode-ident = "1.0.18"
lazy_static = "1.4.0"
trie-rs = "0.4.2"
chrono = { version = "0.4.31", features = ["serde"] }
flate2 = "1.0.28"
clap = { version = "4.4.0", features = ["derive"] }
regex = "1.10"
slotmap = "1.0"
ustr = "1.0"
dhat = "0.3.2"

# Platform-specific dependencies for parent process monitoring
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
] }


# Web server for AST visualization
actix-web = "4.3.1"
actix-cors = "0.6.4"

[dev-dependencies]
tokio-test = "0.4.3"
pretty_assertions = "1.4.0"
insta = { version = "1.43.1", features = ["json", "redactions"] }
tempfile = "3.8.0"
async-trait = "0.1.73"
# Property-based testing for deterministic simulation
proptest = "1.5"
proptest-state-machine = "0.3"
# For graceful shutdown of soak tests
ctrlc = "3.4"

[build-dependencies]
cc = "1.0.83"

[profile.release]
opt-level = "z"
strip = false   # Keep symbols for profiling
debug = 2       # Full debug info for DHAT
