[workspace]
members = [
    ".",
    "crates/ast-visualizer",
    "crates/rbs-parser",
    "crates/lsp-repl",
    "crates/lsp-test-harness",
    "crates/ruby-analysis-core",
    "crates/extension-api",
    "crates/extension-rspec",
    "crates/extension-wasm-host",
]
resolver = "2"

[package]
name = "ruby-fast-lsp"
version = "0.2.3"
edition = "2021"
authors = ["Ruby Fast LSP Team"]
description = "A fast Language Server Protocol implementation for Ruby"
license = "MIT"

[[bin]]
name = "profile_indexer"
path = "src/bin/profile_indexer.rs"

[[bin]]
name = "check_size"
path = "src/bin/check_size.rs"

[[bin]]
name = "profiler"
path = "src/bin/profiler/main.rs"

[[bin]]
name = "ast"
path = "src/bin/ast.rs"

[[bin]]
name = "bench_references"
path = "src/bin/bench_references.rs"

[[bin]]
name = "extension"
path = "src/bin/extension.rs"

[dependencies]
# LSP related dependencies
tower-lsp = "0.20.0"
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
log = "0.4.20"
env_logger = "0.10.0"
anyhow = "1.0.75"
futures = "0.3"
toml = "0.9.8"
semver = "1.0.28"
sha2 = "0.10.9"
ruby-fast-lsp-extension-api = { path = "crates/extension-api" }
ruby-fast-lsp-extension-rspec = { path = "crates/extension-rspec" }
ruby-fast-lsp-extension-wasm-host = { path = "crates/extension-wasm-host" }

# Ruby parsing and analysis
ruby-prism = "1.4.0"
rbs-parser = { path = "crates/rbs-parser" }
ruby-analysis-core = { path = "crates/ruby-analysis-core" }

# File system operations
walkdir = "2.4.0"

# Utils
parking_lot = { version = "0.12.4", features = ["arc_lock"] }
once_cell = "1.19"
unicode-ident = "1.0.18"
lazy_static = "1.4.0"
trie-rs = "0.4.2"
chrono = { version = "0.4.31", features = ["serde"] }
flate2 = "1.0.28"
clap = { version = "4.4.0", features = ["derive"] }
regex = "1.10"
slotmap = "1.0"
ustr = "1.0"
dhat = "0.3.2"
rayon = "1.10"

# Perf corpus: tar.zst decode for bench/perf-test fixtures
tar = "0.4"
zstd = "0.13"

# Platform-specific dependencies for parent process monitoring
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
] }


# Web server for AST visualization
actix-web = "4.3.1"
actix-cors = "0.6.4"

[dev-dependencies]
tokio-test = "0.4.3"
pretty_assertions = "1.4.0"
tempfile = "3.8.0"
async-trait = "0.1.73"
# Property-based testing for deterministic simulation
proptest = "1.5"
proptest-state-machine = "0.3"
# For graceful shutdown of soak tests
ctrlc = "3.4"

[build-dependencies]
cc = "1.0.83"

[features]
default = []
memory-profiling = []

[profile.release]
opt-level = "z"
strip = false   # Keep symbols for profiling
debug = 2       # Full debug info for DHAT
