[package]
name = "ast-visualizer"
version = "0.1.0"
edition = "2021"
description = "A tool for visualizing Ruby AST using the Prism parser"

[dependencies]
actix-web = "4.3.1"
actix-cors = "0.6.4"
ruby-prism = "1.4.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
env_logger = "0.10.0"
log = "0.4.20"
