[package]
name = "lsp-repl"
version = "0.1.0"
edition = "2021"
description = "A generic LSP debugging REPL that works with any language server"
license = "MIT"
authors = ["Ruby Fast LSP Team"]
repository = "https://github.com/example/lsp-repl"
keywords = ["lsp", "language-server", "repl", "debugging"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "lsp-repl"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.32", features = ["full", "process"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# REPL
rustyline = "14.0"

# Error handling
anyhow = "1.0"

# LSP types
lsp-types = "0.95"

# Logging
log = "0.4"
env_logger = "0.10"

# Utils
dirs = "5.0"
