[package]
name = "ruby-fast-lsp-test-harness"
version = "0.1.0"
edition = "2021"
description = "Reusable black-box LSP test harness for Ruby Fast LSP"

[dependencies]
ruby-fast-lsp = { path = "../.." }
tokio = { version = "1.32.0", features = ["full"] }
tower-lsp = "0.20.0"
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.8"
