[package]
name = "ruby-analysis-indexer"
version = "0.1.0"
edition = "2021"
authors = ["Ruby Fast LSP Team"]
description = "Parser-to-facts Ruby indexer for ruby-analysis-engine"
license = "MIT"

[dependencies]
ruby-analysis-core = { path = "../ruby-analysis-core" }
ruby-analysis-inference = { path = "../ruby-analysis-inference" }
ruby-prism = "1.4.0"
log = "0.4.20"
regex = "1.10"
tower-lsp = "0.20.0"
ustr = "1.0"
