[package]
name = "ruby-analysis-inference"
version = "0.1.0"
edition = "2021"
authors = ["Ruby Fast LSP Team"]
description = "Editor-agnostic Ruby type inference for ruby-analysis-engine"
license = "MIT"

[dependencies]
once_cell = "1.19"
log = "0.4.20"
parking_lot = { version = "0.12.4", features = ["arc_lock"] }
rbs-parser = { path = "../rbs-parser" }
ruby-analysis-core = { path = "../ruby-analysis-core" }
ruby-analysis-engine = { path = "../ruby-analysis-engine" }
ruby-prism = "1.4.0"
